# penguin

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  404.html  AGENTS.md  CHANGELOG.md  CLI_IMPROVEMENTS_SUMMARY.md  CLI_ISSUES_ANALYSIS.md  CLI_ROUND2_FIXES.md  Dockerfile  ENHANCED_TOOLS_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  PENGUIN.md  Penguin-Imrpovements.md  README.md  SETUP_TROUBLESHOOTING.md  __init__.py  architecture.md  config.yml  core.py  debug_imports.py  debug_sse.py  docker-compose.yml  engine.py  example_task_events.py  features.md  implementation_plan.md  index.html  penguin_todo_cli.md  penguin_todo_multi_agents.md  penguin_todo_openai.md  penguin_user_manual.md  projects.db  pyproject.toml  requirements-setup.txt  ruff.toml  (+35 more)
.claude/: settings.local.json
.penguin/: .gitignore  settings.local.yml
agent/: __init__.py  base.py  basic_agent.py  launcher.py  schema.py
arch_notes/: conversationsystem1.md  convo1.md  discord_ui.md  jot.md  penguin_cogarch  penguin_system.md  penguin_v1.md  processor_idea.md  single_llm_constraint.md  stories.md  visual.py
context/: CLI.md  CWM_Architecture.md  Claude_Code_Parity_Checklist.md  GEMINI_CLI_STUDY_INDEX.md  Link_backend.md  MEMORY.md  OPENROUTER_FIX.md  OpenAI_terminal_bench_prompting.md  PHASE2_PLAN.md  Penguin-report-1.md  REFACTORING_PROGRESS.md  TASK_SCRATCHPAD.md  TUI_improvement.md  VISUAL_MOCKUPS.md  agent_as_tools.md  api_update_1.md  blueprint.template.md  browser-harness.md  bug_fixes_keyboard_and_tool_events.md  claude_code_subagents_reference.md  cli-feature-list.md  cli_multi_agent_handling.md  config_audit.md  easter-eggs.md  engineering_considerations.md  gemini_cli_architecture_diagrams.md  implementer-log-1.json  improvements.md  input_improvements.md  investigate_continuation_bug.md  link_todo_notifications.md  link_todo_permissions.md  multi-agent-run-3.md  multi_agent_ui_progress.md  multi_agents.md  old-features.md  penguin_cli_refactor_plan.md  penguin_llm_integration.md  penguin_roadmap_issues-2.md  penguin_todo_cli.md  (+18 more)
copywriting/: system_prompt.py
dashboard/: app.py  dashboard.html
docker/: Dockerfile.web  README.md
docs/: .gitignore  DEPLOYMENT_CLOUDFLARE.md  GITHUB_APP_SETUP.md  LINK_INTEGRATION_GUIDE.md  PHASE_2.5_GITHUB_APP_CONFIG.md  README.md  SSE_ENDPOINT.md  conf.py  docusaurus.config.ts  getting_started.md  ideas-for-chat-and-work.md  index.md  index.rst  package-lock.json  package.json  sidebars.ts  vercel.json
examples/: agent_visualizer.py
markdown-page/: index.html
misc/: 2_context_manager.py  BROWSER_FIX_DOCUMENTATION.md  CHECKPOINT_IMPLEMENTATION.md  CLI_PROTOTYPE_README.md  CONTAINER_TESTING_SUMMARY.md  DEBUGGING_GUIDE.md  LANCEDB_PROVIDER.md  PERFORMANCE_ANALYSIS_REPORT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PLUGIN_SYSTEM.md  PUBLISHING.md  Penguin_Agent-plan.md  QUICK_START_PUBLISHING.md  ROUND6_FINAL_FIX_SUMMARY.md  ROUND6_FIXES_SUMMARY.md  SETUP_TROUBLESHOOTING.md  UI_mockups_checkpointing.md  V1_checkpointing_and_branching.md  V2_checkpointing_and_branching.md  ascii.py  base_provider.py  chat_with_Penguin_.md  chrome_debugger.py  cli_new.py  cli_prototype_mock.py  cli_refactor_plan.md  context_manager.py  core_copy.py  debug_claude_sonnet.py  debug_config.py  debug_log_1.txt  debug_log_2.txt  debug_log_3.txt  debug_log_4.txt  debug_log_5.txt  debug_log_6.txt  debug_log_7.txt  dream_integration_example.py  echo_server.py  enhanced_process_manager.py  (+78 more)
penguin/: .env.example  .gitignore  2_workflow_prompt.py  IMPROVEMENTS.md  PERFORMANCE.md  __init__.py  _version.py  api_client.py  config.example.yml  config.py  config.yml  config_sample_fast_startup.yml  constants.py  core.py  engine.py  execution_profiles.py  hub.py  loc_count.py  local_auth.py  main.py  new.py  new_core.py  old_main.py  old_system_prompt.py  penguin_server.py  pns.py  possible_prompt.py  prompt_actions.py  prompt_workflow.py  prompts.py  prompts2.py  proposed_prompt.py  proposed_tools.py  refactor-and-improve.md  requirements.txt  run_mode.py  run_penguin.py  run_web.py  setup_venv.py  speedtest.py  (+10 more)
penguin-cli/: COMMAND_SYSTEM.md  RENDERING_CAPABILITIES.md  package-lock.json  package.json  test-multi-agent.ts  test_model_selection.js  tsconfig.json
penguin-tui/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.ar.md  README.br.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.zh.md  README.zht.md  SECURITY.md  STATS.md  architecture.md  flake.nix  install  package.json  sst-env.d.ts  turbo.json
penguin-web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
scripts/: benchmark_runtime_reliability.py  check_autoload_project_docs.py  count_lines.py  demo_cli_features.py  demo_message_routing.py  demo_multi_agent_workflow.py  docs_multi_and_sub_agent_examples.py  mcp_chrome_smoke.py  mcp_control_plane_smoke.py  mcp_smoke.py  multi_agent_smoke.py  penguin_mcp_server.py  phase0_agents_api_smoke.py  phase0_interactive_example.py  phase0_multi_agent_validation.py  phase1_client_agent_smoke.py  phase2_engine_coordinator_smoke.py  phase3_send_channel_demo.py  phase3_telemetry_smoke.py  phase4_live_agents_demo.py  phaseA_actionxml_flow_demo.py  phaseA_cli_agent_tools_test.py  phaseA_sub_agent_tools_smoke.py  phaseB_actionxml_robustness.py  phaseB_channel_provenance.py  phaseB_context_share_matrix.py  phaseB_lite_tools_sanity.py  phaseB_multi_child_scenario.py  phaseB_pause_resume_during_delegate.py  phaseB_persona_model_override.py  phaseC_rest_smoke.py  phaseC_ws_smoke.py  phaseD_live_sub_agent_demo.py  print_workspace.py  publish_test_pypi.py  pydoll_wiki_click_matrix.py  pydoll_wiki_smoke.py  random_order_pytest.py  repeat_pytest.py  run_runtime_reliability_server.py  (+23 more)
server/: api.py  main.py
static/: index.html
tests/: README_UI_TESTS.md  conftest.py  library_public_surface_test.py  run_all_tests.py  run_phase1_tests.py  run_responses_streaming_tests.py  run_server.py  stress_test_cwm.py  test_api_client.py  (+148 more)
(+1264 files in other folders)
