[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "penguin-ai"
version = "0.1.0"
description = "Penguin: A modular, extensible AI coding agent and software engineer with its own execution environment."
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL-3.0"
license-files = ["LICENSE"]
authors = [
  { name="Maximus Putnam", email="MaximusPutnam@gmail.com" },
]
keywords = ["ai", "agent", "ai-agent", "llm", "llm-agent", "assistant", "cognitive-architecture", "code-generation", "developer-tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    # Web Framework
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "websockets>=10.0",
    "jinja2>=3.0.0",
    # Core Dependencies
    "tenacity>=8.0.1",
    "pydantic>=1.8.2",
    "python-dotenv>=0.19.0",
    # LLM and API
    "litellm>=1.0.0",
    "anthropic>=0.3.0",
    "openai>=0.27.0",
    # Memory and Search
    "chromadb>=0.3.0",
    "ollama>=0.1.0",
    # Utils
    "rich>=10.0.0",
    "typer>=0.4.0",
    "requests>=2.26.0",
    "textual>=0.52.0",
    "plotext",
    "matplotlib",
    "networkx",
    "IPython", # Kept as runtime, review if only needed for dev/notebooks
    "ipykernel", # Kept as runtime, review if only needed for dev/notebooks
    "ipywidgets", # Kept as runtime, review if only needed for dev/notebooks
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/Maximooch/penguin" # Updated URL
Repository = "https://github.com/Maximooch/penguin" # Updated URL

[project.scripts]
penguin = "penguin.chat.cli:app"
penguin-web = "penguin.api.server:main"

[tool.setuptools.packages.find]
where = ["penguin"]  # Look for packages inside the 'penguin' directory

[tool.setuptools]
include-package-data = true # Tells setuptools to respect MANIFEST.in or VCS-tracked files 